--- a/causal-inference-for-the-brave-and-true/15-Synthetic-Control.ipynb
+++ b/causal-inference-for-the-brave-and-true/15-Synthetic-Control.ipynb
@@ -32,7 +32,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 17,
       "metadata": {
         "id": "34_vvyPjYRa7"
       },
@@ -73,14 +73,41 @@
         "!wget https://github.com/matheusfacure/python-causality-handbook/raw/master/causal-inference-for-the-brave-and-true/data/smoking.csv"
       ],
       "metadata": {
-        "id": "3eYeNgrGeR6D"
+        "id": "3eYeNgrGeR6D",
+        "outputId": "840c227e-bec9-4b13-b79c-dba4e45e34eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-09-03 00:46:24--  https://github.com/matheusfacure/python-causality-handbook/raw/master/causal-inference-for-the-brave-and-true/data/smoking.csv\n",
+            "Resolving github.com (github.com)... 140.82.112.3\n",
+            "Connecting to github.com (github.com)|140.82.112.3|:443... connected.\n",
+            "HTTP request sent, awaiting response... 302 Found\n",
+            "Location: https://raw.githubusercontent.com/matheusfacure/python-causality-handbook/master/causal-inference-for-the-brave-and-true/data/smoking.csv [following]\n",
+            "--2024-09-03 00:46:24--  https://raw.githubusercontent.com/matheusfacure/python-causality-handbook/master/causal-inference-for-the-brave-and-true/data/smoking.csv\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.111.133, 185.199.109.133, 185.199.108.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.111.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 200 OK\n",
+            "Length: 101330 (99K) [text/plain]\n",
+            "Saving to: ‘smoking.csv’\n",
+            "\n",
+            "smoking.csv         100%[===================>]  98.96K  --.-KB/s    in 0.02s   \n",
+            "\n",
+            "2024-09-03 00:46:24 (4.32 MB/s) - ‘smoking.csv’ saved [101330/101330]\n",
+            "\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 18,
       "metadata": {
         "scrolled": true,
         "colab": {
@@ -88,7 +115,7 @@
           "height": 206
         },
         "id": "OcpX1q_5YRa8",
-        "outputId": "10210840-430c-47ed-c9d1-06f7b6354095"
+        "outputId": "d55d1b8c-c1b4-4a1a-8a73-3ad34f14ac84"
       },
       "outputs": [
         {
@@ -104,7 +131,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-5f42d0c4-4dae-4467-a9b2-81773793f25f\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-d74e3152-1388-4537-9b66-a9a8c96ee392\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -183,7 +210,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-5f42d0c4-4dae-4467-a9b2-81773793f25f')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-d74e3152-1388-4537-9b66-a9a8c96ee392')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -235,12 +262,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-5f42d0c4-4dae-4467-a9b2-81773793f25f button.colab-df-convert');\n",
+              "        document.querySelector('#df-d74e3152-1388-4537-9b66-a9a8c96ee392 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-5f42d0c4-4dae-4467-a9b2-81773793f25f');\n",
+              "        const element = document.querySelector('#df-d74e3152-1388-4537-9b66-a9a8c96ee392');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -260,8 +287,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-c7025cb3-840b-4df1-ac40-69b82a26510d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c7025cb3-840b-4df1-ac40-69b82a26510d')\"\n",
+              "<div id=\"df-b2c0a6de-a8e2-42f9-9994-741ab2f4fbb9\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-b2c0a6de-a8e2-42f9-9994-741ab2f4fbb9')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -380,7 +407,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-c7025cb3-840b-4df1-ac40-69b82a26510d button');\n",
+              "        document.querySelector('#df-b2c0a6de-a8e2-42f9-9994-741ab2f4fbb9 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -396,7 +423,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 18
         }
       ],
       "source": [
@@ -417,14 +444,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 19,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 524
         },
         "id": "guEEeGZ_YRa8",
-        "outputId": "0e63817d-aaab-4561-8b6e-e65134712a8f"
+        "outputId": "ca532023-911e-4cef-e5f9-fc62957f5d1d"
       },
       "outputs": [
         {
@@ -512,14 +539,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 20,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 267
         },
         "id": "n2V3uxEzYRa9",
-        "outputId": "6b8d6c4a-3917-4bfa-9c96-6c927095c54b"
+        "outputId": "604334bc-befb-4ee8-f4e7-666775bff991"
       },
       "outputs": [
         {
@@ -546,7 +573,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-41423077-09cb-4f66-ad82-fc4bd389e39c\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-644db9b3-9090-4db9-8f57-d1213b5c06d6\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -645,7 +672,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-41423077-09cb-4f66-ad82-fc4bd389e39c')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-644db9b3-9090-4db9-8f57-d1213b5c06d6')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -697,12 +724,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-41423077-09cb-4f66-ad82-fc4bd389e39c button.colab-df-convert');\n",
+              "        document.querySelector('#df-644db9b3-9090-4db9-8f57-d1213b5c06d6 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-41423077-09cb-4f66-ad82-fc4bd389e39c');\n",
+              "        const element = document.querySelector('#df-644db9b3-9090-4db9-8f57-d1213b5c06d6');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -722,8 +749,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-bcd54d5b-13cb-4756-ba4f-f8fad16aac3f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bcd54d5b-13cb-4756-ba4f-f8fad16aac3f')\"\n",
+              "<div id=\"df-c25645b1-0694-4cec-b434-04cc03b950dd\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-c25645b1-0694-4cec-b434-04cc03b950dd')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -842,7 +869,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-bcd54d5b-13cb-4756-ba4f-f8fad16aac3f button');\n",
+              "        document.querySelector('#df-c25645b1-0694-4cec-b434-04cc03b950dd button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -858,7 +885,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 20
         }
       ],
       "source": [
@@ -882,7 +909,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 21,
       "metadata": {
         "id": "nrb6cfkLYRa9"
       },
@@ -903,7 +930,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -944,7 +971,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "S_ufHekzYRa9"
       },
@@ -1044,7 +1071,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {
         "id": "YDivStxlYRa-"
       },
@@ -1077,7 +1104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "7bruV2CNYRa-"
       },
@@ -1108,20 +1135,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "uCYWxUvXYRa-",
-        "outputId": "135ce6fc-8081-4120-b845-e1126312f882"
+        "outputId": "c5d5990b-9aeb-4126-c4f8-bffe64b9ea86",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Sum: 1.000000000000424\n"
           ]
         },
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "array([0.    , 0.    , 0.    , 0.0852, 0.    , 0.    , 0.    , 0.    ,\n",
@@ -1131,9 +1162,8 @@
               "       0.2401, 0.    , 0.    , 0.    , 0.    , 0.    ])"
             ]
           },
-          "execution_count": 11,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 24
         }
       ],
       "source": [
@@ -1156,7 +1186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "kHEZs8pqYRa-"
       },
