--- a/causal-inference-for-the-brave-and-true/17-Predictive-Models-101.ipynb
+++ b/causal-inference-for-the-brave-and-true/17-Predictive-Models-101.ipynb
@@ -3,7 +3,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "lzkfqv1xT7ph"
+        "id": "G9txRse1U9V4"
       },
       "source": [
         "# 17 - Predictive Models 101\n",
@@ -68,7 +68,7 @@
         "!wget https://raw.githubusercontent.com/AluminumShark/python-causality-handbook/refs/heads/master/causal-inference-for-the-brave-and-true/data/customer_features.csv"
       ],
       "metadata": {
-        "id": "REuATtrhUA92"
+        "id": "3hwqiZf5VT1_"
       },
       "execution_count": null,
       "outputs": []
@@ -80,7 +80,7 @@
         "tags": [
           "hide-input"
         ],
-        "id": "4atshGKxT7pj"
+        "id": "51CgvM6UU9V8"
       },
       "outputs": [],
       "source": [
@@ -99,7 +99,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EtjXhqINT7pk"
+        "id": "677H2Ob1U9V9"
       },
       "source": [
         "For instance, suppose you have 30 days of transactional data on 10000 customers. You also have the cost of acquisition `cacq`. This could be the bid you place for them if you are doing online marketing, it could be the cost of shipping or any training you have to do with your customer so they can use your product. Also, for the sake of simplicity (this is a crash course, not a semester on customer valuation), let's pretend you have total control of the customer that you do business with. In other words, you have the power to deny a customer even if he or she wants to do business with you. If that's the case, your task now becomes identifying who will be profitable beforehand, so you can choose to engage only with them."
@@ -109,8 +109,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "GQYbFRm-T7pk",
-        "outputId": "312832a2-e20a-444f-ef02-569e52f992a0"
+        "id": "MUoFFYtwU9V9",
+        "outputId": "26b4409f-2b5d-4ce4-ad8a-45c6c3e16a1f"
       },
       "outputs": [
         {
@@ -321,7 +321,7 @@
         }
       ],
       "source": [
-        "transactions = pd.read_csv(\"customer_transactions.csv\")\n",
+        "transactions = pd.read_csv(\"data/customer_transactions.csv\")\n",
         "print(transactions.shape)\n",
         "transactions.head()"
       ]
@@ -329,7 +329,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Bsvn_PX4T7pk"
+        "id": "SjUhyD66U9V-"
       },
       "source": [
         "What we need to do now is distinguish the good from the bad customers according to this transactional data. For the sake of simplicity, I'll just sum up all transactions and the CACQ. Keep in mind that this throws under the rug a lot of nuances, like distinguishing customers that are churned from those that are in a break between one purchase and the next.\n",
@@ -341,8 +341,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "vwv0htU9T7pk",
-        "outputId": "b8a5930f-8fce-4351-c9be-843e8bbf6dc3"
+        "id": "KPDoWaM4U9V-",
+        "outputId": "bce72122-6ae7-4438-d773-e71281293983"
       },
       "outputs": [
         {
@@ -438,7 +438,7 @@
         "                      .drop(columns=\"customer_id\")\n",
         "                      .sum(axis=1)))\n",
         "\n",
-        "customer_features = (pd.read_csv(\"customer_features.csv\")\n",
+        "customer_features = (pd.read_csv(\"data/customer_features.csv\")\n",
         "                     .merge(profitable, on=\"customer_id\"))\n",
         "\n",
         "customer_features.head()"
@@ -447,7 +447,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "pBAo4lvpT7pk"
+        "id": "MMRy-4k3U9V-"
       },
       "source": [
         "Good! Our task is becoming less abstract. We wish to identify the profitable customers (`net_value > 0`) from the non profitable ones. Let's try different things and see which one works better. But before that, we need to take a quick look into Machine Learning (feel free skip if you know how ML works)\n",
@@ -484,7 +484,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4OHi8YDJT7pk"
+        "id": "gnOUuX6PU9V-"
       },
       "source": [
         "## Cross Validation\n",
@@ -512,8 +512,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "29lvXUf-T7pl",
-        "outputId": "c8e88346-a952-411c-eaf9-8055c05cb0a4"
+        "id": "cIbGNtRpU9V-",
+        "outputId": "f202819b-6071-4675-b424-92209d63cfe0"
       },
       "outputs": [
         {
@@ -535,7 +535,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "4PADnrnxT7pl"
+        "id": "iFF-uajOU9V_"
       },
       "source": [
         "## Predictions and Policies\n",
@@ -559,8 +559,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "SAuVH2uyT7pl",
-        "outputId": "cd855be0-742a-4751-c95c-6d2a0a09d51f"
+        "id": "OYldViy3U9V_",
+        "outputId": "5094942b-b558-47ed-a184-1f8051fc32fe"
       },
       "outputs": [
         {
@@ -581,7 +581,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "qqjThIS5T7pl"
+        "id": "V_8I5fHdU9V_"
       },
       "source": [
         "That's a bummer... If we engage with everyone, we would lose about 30 reais for customers we do business with. Our first, very simple thing didn't work and we better find something more promising if we don't want to go out of business. Just a quick side note here, keep in mind that this is a pedagogical example. Although the very simple, \"treat everyone the same\" kind of policy didn't work here, they often do in real life. It is usually the case that sending a marketing email to everyone is better than not sending it, or giving discounts coupons to everyone is often better than not giving them.\n",
@@ -595,8 +595,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ydWiG7gjT7pl",
-        "outputId": "121b3d15-8253-459c-c2df-827043916d98"
+        "id": "O2FqXRQcU9WA",
+        "outputId": "96e819ae-97c0-46e6-a21e-2ae16637b8ce"
       },
       "outputs": [
         {
@@ -624,7 +624,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "074LHRVZT7pl"
+        "id": "QnmMK3MlU9WA"
       },
       "source": [
         "And, sadly, nope. Yet again, all levels of income have negative average net value. Although it is true that richer customers are \"less bad\" than non rich customers, they still generate, on average, negative net value. So income didn't help us much here, but what about the other variables, like region? If most of our costs come, say, from having to serve customers in far away places, we should expect that the region distinguishes the profitable from the unprofitable customers.\n",
@@ -636,8 +636,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "QRThn2wWT7pl",
-        "outputId": "199e28e7-89f0-42aa-aec6-2bc6409d31f7"
+        "id": "3eKklFwOU9WA",
+        "outputId": "d27fa29f-59a4-4c8e-f2bd-fbb08591fe4d"
       },
       "outputs": [
         {
@@ -661,7 +661,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "mcYFIigMT7pl"
+        "id": "2p7R071IU9WA"
       },
       "source": [
         "Bingo! We can clearly see that some regions are profitable, like regions 2, 17, 39, and some are not profitable, like regions 0, 9, 29 and the especially bad region 26. This is looking super promising! We can take this and transform into a policy: only do business with the regions that showed to be profitable *according to the data that we have here*.\n",
@@ -677,8 +677,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "iMJDejQPT7pm",
-        "outputId": "75e8ad80-d706-44b9-fe8a-eca65bff23e6"
+        "id": "54IdezxEU9WA",
+        "outputId": "27cce42e-a9bc-49ca-f379-1ba8ab10a20b"
       },
       "outputs": [
         {
@@ -731,7 +731,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5SlEXprJT7pm"
+        "id": "Uld63DJfU9WA"
       },
       "source": [
         "`regions_to_invest` has all the regions we will engage with. Lets now see how this policy would have performed in our test set, the one we pretend not to have. This is a key step in evaluating our policy, because it could very well be that, simply by chance, a region in our training set is appearing to be profitable. If that is only due to randomness, it will be unlikely that we will find that same pattern in the test set.\n",
@@ -743,8 +743,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "UUkCAm05T7pm",
-        "outputId": "07153f11-fb19-4a60-a5d0-98a45ab6015e"
+        "id": "Q4rS58I7U9WA",
+        "outputId": "e63fa2c9-0b1f-4455-f0bc-b4e0f85e6450"
       },
       "outputs": [
         {
@@ -771,7 +771,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "5vtYrACbT7pm"
+        "id": "7XMRp_DbU9WA"
       },
       "source": [
         "## Machine Learning Models as Policy Inputs\n",
@@ -791,7 +791,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "EdeWMNR5T7pm"
+        "id": "qSSPPjOQU9WA"
       },
       "outputs": [],
       "source": [
@@ -802,7 +802,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "kyj-VhQzT7pm"
+        "id": "LP1ilvvBU9WA"
       },
       "source": [
         "Next, our model will be imported from [Sklearn](https://scikit-learn.org/stable/). All their models have a pretty standard usage. First, you instantiate the model passing in the complexity parameters. For this model, we will set the number of estimators to 400, the max depth to 4 and so on. The deeper the model and the greater the number of estimators, the more powerful the model will be. Of course, we can't let it be too powerful, otherwise it will learn the noise in the training data or overfit to it. Again, you don't need to know the details of what these parameters do. Just keep in mind that this is a very good prediction model. Then, to train our model, we will call the `.fit()` method, passing the features `X` and the variable we want to predict - or target variable - `net_value`."
@@ -812,7 +812,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "sicCRNPfT7pm"
+        "id": "sDShun4fU9WB"
       },
       "outputs": [],
       "source": [
@@ -837,7 +837,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "WGZidcLfT7pm"
+        "id": "rYSxh1FUU9WB"
       },
       "source": [
         "The model is now trained. Next, we need to check if it is any good. To do this, we can look at the predictive performance of this model **on the test set**. There are tons of metrics to evaluate the predictive performance of a machine learning model. Here, I'll use one which is called $R^2$. We don't need to get into much detail here. It suffices to say that the $R^2$ is used to evaluate models that predict a continuous variable (like `net_income`). Also, $R^2$ can go from minus infinity (it will be negative if the prediction is worse than the average) to 1.0. The $R^2$ tells us how much of the variance in `net_income` is explained by our model."
@@ -847,8 +847,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "b3I5fdX8T7pm",
-        "outputId": "6ab670bc-55b2-49bf-a712-27ec7aaeec1f"
+        "id": "ZcdrclloU9WB",
+        "outputId": "e2e153f6-e2e1-4909-eeb2-c3f9062b8790"
       },
       "outputs": [
         {
@@ -871,7 +871,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Yg3EjfCWT7pn"
+        "id": "Fllac8PCU9WB"
       },
       "source": [
         "In this case, the model explains about 71% of the `net_income` variance in the training set but only about 69% of the `net_income` variance in the test set. This is expected. Since the model had access to the training set, the performance there will often be overestimated. Just for fun (and to learn more about overfitting), try setting the 'max_depth' of the model to 14 and see what happens. You will likely see that the train $R^2$ skyrockets but the test set $R^2$ gets lower. This is what overfitting looks like.\n",
@@ -883,8 +883,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "182wom5OT7pn",
-        "outputId": "b20bf941-297e-40fa-f5cd-f58e3577f809"
+        "id": "CYnE59bJU9WB",
+        "outputId": "06c67e23-ea6a-4ea4-d604-43499a17cbe3"
       },
       "outputs": [
         {
@@ -989,7 +989,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "9wDTEBohT7pn"
+        "id": "YZYk1PZZU9WB"
       },
       "source": [
         "Just like we did with the `regions` feature, we can show the average net value by predictions of our model. Since the model is continuous and not categorical, we need to make it discrete first. One way of doing so is using pandas `pd.qcut` (by golly! I love this function!), which partitions the data into quantiles using the model prediction. Let's use 50 quantiles because 50 is the number of regions that we had. And just as a convention, I tend to call these model quantiles **model bands**, because it gives the intuition that this group has model predictions within a band, say, from -10 to 200."
@@ -999,8 +999,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "ZPDesn6CT7pn",
-        "outputId": "947ebb35-e2e1-4aac-d7c4-34bcad3fdb0e"
+        "id": "11-2F7JvU9WB",
+        "outputId": "e56946d9-f224-466e-ebc9-b323079250f6"
       },
       "outputs": [
         {
@@ -1031,7 +1031,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "JGeURxzPT7pn"
+        "id": "3cFxFBqAU9WB"
       },
       "source": [
         "Here, notice how there are model bands where the net value is super negative, while there are also bands where it is very positive. Also, there are bands where we don't know exactly if the net value is negative or positive. Finally, notice how they have an upward trend, from left to right. Since we are predicting net value, it is expected that the prediction will be proportional to what it predicts.\n",
@@ -1046,8 +1046,8 @@
         "tags": [
           "hide-input"
         ],
-        "id": "LyS0K6W_T7pn",
-        "outputId": "d404199a-927b-410b-96c2-d4ae6df363a4"
+        "id": "w2kT9o5pU9WB",
+        "outputId": "1c9b4736-7ebd-45d6-93c5-6c6ebeae15b7"
       },
       "outputs": [
         {
@@ -1078,7 +1078,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "vD3fY1QST7pn"
+        "id": "Bk3LpUACU9WC"
       },
       "source": [
         "As we can see, the model generates a better policy than just using the `region` feature, but not by much. While the model policy would have made us about 16.6 reais / customer on the test set, the region policy would have made us only 15.5 / customer. It's just slightly better, but if you have tons and tons of customers, this might already justify using a model instead of a simple one feature policy.\n",
@@ -1109,8 +1109,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "owfkWZuhT7po",
-        "outputId": "f8bf4394-bc39-4502-ac49-efc66b299825"
+        "id": "bhdAI8eiU9WC",
+        "outputId": "dc0d282f-b919-4080-82d7-b1d0e06a2c2c"
       },
       "outputs": [
         {
@@ -1238,8 +1238,8 @@
         "tags": [
           "hide-input"
         ],
-        "id": "0w6im6dRT7po",
-        "outputId": "1a93fdef-a306-4f91-a4ea-6cfe513d72bc"
+        "id": "3e_umGxBU9WC",
+        "outputId": "1e91cc2f-7982-487d-ec20-45f5191eb69c"
       },
       "outputs": [
         {
@@ -1262,7 +1262,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "33joPvDmT7po"
+        "id": "XlMqjS1hU9WC"
       },
       "source": [
         "With these bands, we can allocate the bulk of our marketing investments to band 20 and 19. Notice how we went from a binary decision (engage vs not engage), to a continuous one: how much to invest on marketing for each customer. Of course you can fine tune this even more, adding more bands. In the limit, you are not binning at all. Instead, you are using the raw prediction of the model and you can create decision rules like\n",
@@ -1297,7 +1297,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XGY-QrQjT7po"
+        "id": "VOV2i8oPU9WC"
       },
       "outputs": [],
       "source": []
