--- a/causal-inference-for-the-brave-and-true/17-Predictive-Models-101.ipynb
+++ b/causal-inference-for-the-brave-and-true/17-Predictive-Models-101.ipynb
@@ -321,7 +321,7 @@
         }
       ],
       "source": [
-        "transactions = pd.read_csv(\"data/customer_transactions.csv\")\n",
+        "transactions = pd.read_csv(\"customer_transactions.csv\")\n",
         "print(transactions.shape)\n",
         "transactions.head()"
       ]
@@ -438,7 +438,7 @@
         "                      .drop(columns=\"customer_id\")\n",
         "                      .sum(axis=1)))\n",
         "\n",
-        "customer_features = (pd.read_csv(\"data/customer_features.csv\")\n",
+        "customer_features = (pd.read_csv(\"customer_features.csv\")\n",
         "                     .merge(profitable, on=\"customer_id\"))\n",
         "\n",
         "customer_features.head()"
